# sniidu

./: .sops.yaml  CLAUDE.md  GEMINI.md  GOAL.md  devenv.nix  flake.nix
.agent/skills/adr-suggester/: SKILL.md
.agent/workflows/: adr.md
.claude/: settings.json
.claude/commands/: adr.md
.claude/hooks/: post-infra-edit.sh
apps/ios/Open2Log/Sources/App/: AppState.swift
apps/ios/Open2Log/Sources/Models/: CachedShop.swift  User.swift
apps/ios/Open2Log/Sources/Services/: APIClient.swift  ImageUploader.swift  OfflineStorage.swift  SyncManager.swift
doc/adr/: 0002-use-open-source-tools.md
docs/: infra.md
infra/: .terraform.lock.hcl  cloudflare.tf  config.tf  hetzner.tf  nixos-deploy.tf  providers.tf
infra/scripts/: generate-secrets.sh  get-ssh-host-key.sh
secrets/: infra.yaml
server/configuration/: flake.nix  memento-mori.nix
server/modules/: crawler.nix  disko-zfs.nix
workers/shopping-lists/: Cargo.toml  schema.sql
workers/shopping-lists/src/: lib.rs
