[package]
name = "shopping-lists-worker"
version = "0.1.0"
edition = "2021"
authors = ["Onni Hakala <onni@flaky.build>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4", features = ["d1"] }
worker-macros = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
